SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements: 

Updated Italian translation (Ivo Neri), Chinese translation (xpdz)

New user interface layout: Tabbed layout

Hibernate Plugin:
   - Cleaned up details display in mapped objects tab: Now every tree node displays an appropriate details table.
   - Added hint to solve StackOverflowError caused by logging that may occur when connecting to a Hibernate configuration.

Object tree search (Feature request 2004240):
   Above the Object tree is a text field and a find button.
   The search string has to be the exact simple (unqualified) name of an DB object or may contain placeholders ("%" or "_").
   The text field supports code completion.
   A filter button allows to apply the search string as Object tree filter. 

Object tree filtering:
   Multiple (comma separated) Object tree filters can be defined. Filter conditions can be excluding oder including.
   Better support for placeholders "%" and "_".
   See "Session Properties"/"New Session Properties" dialogs --> Tab "Object Tree".

Graph Plugin:
 - Qualified table names can now be displayed. Use the right mouse menu on graph background.

Edit Extras Plugin:
 - Improved handling and look of Escape date dialog. 

Graph Plugin:
 - New entries in table's popup menu: "Copy table name" and "Copy qualified table name".
 - Columns of all tables in a graph can now be ordered at once. Use the right mouse menu on graph background.

New Plugin: Smarttools by Michael Romankiewicz
  - Searching for tables that do not have a primary key or unique index or index.
  - Searching for non nullable columns that contain null values. Some DBs e.g. Firebird can be tricked to have this inconsistency.
  - Changing values database wide according to specified criteria.
  For more information see the Plugin's help.

