@@ -80,3 +80,6 @@ classname13=org.jvnet.substance.SubstanceLookAndFeel
 classname13.noi18n=true
 jar13=substance.jar
 jar13.noi18n=true
+
+classname14=com.sun.java.swing.plaf.nimbus.NimbusLookAndFeel
+classname14.noi18n=true
